# rpa_gs

./: .gitignore  Dockerfile  README.md  agendador.py  analise.py  api.py  banco.py  config.py  docker-compose.yml  gerador_dados.py  model.py  processador.py  pyproject.toml  relatorio.py  requirements.txt  robo.py
frontend/: index.html
