[project]
name = "estacao-controle-missao"
version = "1.0.0"
description = "Robo RPA que processa telemetria espacial de ponta a ponta (FIAP - AI for RPA)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "schedule>=1.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
